# c-practice

./: .gitignore  CMakeLists.txt  adlist.c  adlist.h  main.c  sds.c  sds.h
practice-extern/: helper.c
practice-generic/: main.c
practice-mmap/: main  main.c
redis/: adlist.c  adlist.h  adlist_test.c  adlist_test.h  base.h  main.c  print.h  sds.c  sds.h  sds_test.c  sds_test.h
redis/back/: adlist.c
t-generic-paradigm/: main1.c
test/: a.out  main  main.c
test-extern/: program
